--- a/h8dsft_ngc_python_syntax_and_variable.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['Nanggroe Aceh Darussalam', 'Sumatera Selatan', 'Kalimantan Barat', 'Jawa Timur', 'Sulawesi Selatan', 'Maluku'])\n",
-      "{'Nanggroe Aceh Darussalam': 'Aceh', 'Sumatera Selatan': 'Palembang', 'Kalimantan Barat': 'Pontianak', 'Jawa Timur': 'Surabaya', 'Sulawesi Selatan': 'Makassar', 'Maluku': 'Ambon'}\n"
+      "dict_items([('Nanggroe Aceh Darussalam', 'Aceh'), ('Sumatera Selatan', 'Palembang'), ('Kalimantan Barat', 'Pontianak'), ('Jawa Timur', 'Surabaya'), ('Sulawesi Selatan', 'Makassar'), ('Maluku', 'Ambon')])\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
     "# 2\n",
     "provinsi['Jawa Timur'] = 'Surabaya' # Mengubah value dari 'Jawa Timur' yang mulanya 'Madiun' menjadi 'Surabaya'\n",
     "\n",
-    "print(provinsi)                     # Menampilkan dictionary provinsi"
+    "print(provinsi.items())             # Menampilkan seluruh item dari dictionary provinsi (key beserta value masing-masing)"
    ]
   }
  ],
