--- a/h8dsft_ngc_python_syntax_and_variable.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,13 +33,13 @@
     "'A092', 'B341', 'A461', 'A092', 'A083', 'B821', 'A092'\n",
     "]\n",
     "\n",
-    "unique_id = set(customer_id)                                                # Mengubah list customer_id menajadi set unique_id agar dapat menghitung jumlah unique pada customer_id\n",
+    "unique_id = set(customer_id)                                                # Mengubah list customer_id menjadi set unique_id agar dapat menghitung jumlah unique pada customer_id\n",
     "print((\"Total of Unique ID in the customer_id list are:\"), len(unique_id))  # Menampilkan jumlah unique id pada set unique_id (awal mulanya customer_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
     "Data = [1, 4, 9, 16, 25, 36, 49,  64, 81, 100]\n",
     "\n",
     "# 1\n",
-    "Data[3]             # Indexing\n",
+    "Data[3]             # Menentukan data yang mau diambil dari list dengan indeks\n",
     "print(Data[3])      # Menampilkan pengambilan nilai pada indeks ke-3\n",
     "\n",
     "# 2\n",
